--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,158 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+    <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    <title>Green Travel</title>
-    
-    
+        <title>Green Travel</title>
 
-    <style>
-    .carousel-inner{
-        height:500px;
-        width: 108.55%;
-        right: 4.3%;
-        alignment-adjust: central;
-    }
-    </style>
+    </head>
 
-</head>
+    <body id="page-top" class="home">
+        <div class="row">   
+            <div id="myCarousel" class="carousel slide  " data-ride="carousel" >
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#myCarousel" data-slide-to="5"></li>
 
-<body id="page-top" class="home">
-<div class="container">
-
- <div class="container">
-       
- <div id="myCarousel" class="carousel slide  " data-ride="carousel" >
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-    <li data-target="#myCarousel" data-slide-to="4"></li>
-    <li data-target="#myCarousel" data-slide-to="5"></li>
-
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" >
-    <div class="item active" >
-        <div class="img_container ">
-            <img src="<?= $this->countrys_rated[0]['image']?>" alt="" >
-            <a href="country/cities?cid=<?= $this->countrys_rated[0]['id']?>" class="btn btn-info btn-xl page-scroll"> Learn More > </a>
-        </div>
-    </div>
-    
-    <?php
-    $i=1; foreach($this->countrys_rated as $key=>$value): 
-    if (!$i){?>
-        <div class="item" >
-            <div class="img_container ">
-                <img src="<?= $value['image']?>" alt="" >
-                <a href="country/cities?cid=<?= $value['id']?>" class="btn btn-info btn-xl page-scroll"> Learn More > </a>
-            </div>
-        </div>             
-    <?php  } $i=0; endforeach;?>
-  </div>
-   <!-- Controls -->
-   <a class="left carousel-control" href="#myCarousel" data-slide="prev" style=" margin-top: 100px;height:400px;">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next" style="margin-top: 100px; height:400px;">
-            <span class="icon-next"></span>
-        </a>
-</div>
-</div>
-    <div style="height:500px;"></div>
-                
-                
-
-<div class="col-lg-8 col-lg-offset-2 text-center">
-    <h2 class="section-heading">High six rated Cities!</h2>
-    <hr class="light" style="color:green;">
-</div>
-
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid" >
-            <div class="row no-gutter" >
-                <?php foreach($this->citys_rated as $key=>$value): ?>
-                <div class="col-lg-4 col-sm-6" style="height:200px;">
-                    <a href="/city/display?id=<?= $value['id']?>" class="portfolio-box">
-                        <img src="<?= $value['image']?>" class="img-responsive " alt="" style="width: 500px; height:300px;">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    <?= $value['name']?>
-                                </div>
-                                <div class="project-name">
-                                    Show City Details
-                                </div>
-                            </div>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">_
+                    <div class="item active" >
+                        <div class="img_container ">
+                            <img src="<?= $this->countrys_rated[0]['image'] ?>" alt="">
+                            <a href="country/cities?cid=<?= $this->countrys_rated[0]['id'] ?>" class="btn btn-info btn-xl text-center col-centered page-scroll"> Learn More > </a>
                         </div>
-                    </a>
+                    </div>
+                    <?php
+                    $i = 1;
+                    foreach ($this->countrys_rated as $key => $value):
+                        if (!$i) {
+                            ?>
+                            <div class="item" >
+                                <div class="img_container ">
+                                    <img src="<?= $value['image'] ?>" alt="" >
+                                    <a href="country/cities?cid=<?= $value['id'] ?>" class="btn btn-info btn-xl col-centered text-center page-scroll"> Learn More > </a>
+                                    <div class="carousel-caption country">
+                                        <h2><?= $value['name'] ?></h2>
+                                        <p><?= $value['description'] ?></p>
+                                    </div>
+
+                                </div>
+                            </div>             
+                    <?php } $i = 0; endforeach; ?>
                 </div>
-                <?php endforeach;?>
+                <!-- Controls -->
+                <a class="left carousel carousel-control" href="#myCarousel" data-slide="prev" >
+                    <span class="icon-prev"></span>
+                </a>
+                <a class="right carousel carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="icon-next"></span>
+                </a>
             </div>
-        </div>
-    </section>
-    <div style="height:50px;"></div>
-
-    <section id="contact">
-
-        <div class="container">
+            <div style="height:100px;"></div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your adventure with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">greentravel@travel.com</a></p>
+                <div id="desc-web" class="col-lg-8 col-lg-offset-2 text-center">
+                    <p style="font-size:24px;"> 
+                        <b>Green Travel Guide lead will you to the best places in the world.</b><br>
+                        If you need to spend your free time in the most beautiful places and feel happy just visit our web site 
+                        and navigate between your favorite countries and cities to know it's famous locations on it.
+                    </p>
                 </div>
             </div>
+            <div style="height:100px;"></div>      
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">High six rated Cities!</h2>
+                <hr class="light" style="color:green;">
+            </div>
+            <section class="no-padding" id="portfolio">
+                <div class="container-fluid" >
+                    <div class="row no-gutter" >
+                    <?php foreach ($this->citys_rated as $key => $value): ?>
+                            <div class="col-lg-4 col-sm-6" style="padding: 5px; height:320px;">
+                                <a href="/city/display?id=<?= $value['id'] ?>" class="portfolio-box">
+                                    <img src="<?= $value['image'] ?>" class="img-responsive " alt="" style="width: 500px; height:300px;">
+                                    <div class="portfolio-box-caption">
+                                        <div class="portfolio-box-caption-content">
+                                            <div class="project-category text-faded">
+                                                <?= $value['name'] ?>
+                                            </div>
+                                            <div class="project-name">
+                                                Show City Details
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                    <?php endforeach; ?>
+                    </div>
+                </div>
+            </section>
+            <div style="height:50px;"></div>
+            <section id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 text-center">
+                            <h2 class="section-heading">Let's Get In Touch!</h2>
+                            <hr class="primary">
+                            <p>Ready to start your adventure with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                        </div>
+                        <div class="col-lg-4 col-lg-offset-2 text-center">
+                            <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                            <p>123-456-6789</p>
+                        </div>
+                        <div class="col-lg-4 text-center">
+                            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                            <p><a href="mailto:your-email@your-domain.com">greentravel@travel.com</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
-    </section>
-  
-<style type="text/css">
-.img_container img{
-    position: absolute;
-    alignment-adjust: middle;
-    width: 100%;
-    height: 500px;
-    top: 50px;
-    padding:50px;
-}
-.img_container a{
-    position: absolute;
-    margin-top: 10px;
-    alignment-adjust: middle;
-    z-index: 100;
-    right: 44%;
-    top: 275px;
-    
-}
-.portfolio-box-caption:hover{
-    background-color: rgba(0, 255, 92, 0.5); 
-}
- .home{
-background-color: rgba(0, 255, 92, 0.3); 
- }
+    </body>
+    <style type="text/css">
+        .carousel-inner{
+            top:0;
+            height:600px;
+            width: 100%;
+            padding: 0;
+            alignment-adjust: central;
+        }
+        .container{
+            margin-top: 20px;
+            height:600px;
+            padding: 0;
+            width: 100%;
+        }
+        .img_container img{
+            alignment-adjust: middle;
+            position: relative;
+            height:600px;
+            width: 100%;
+            top: -20px;
+            padding:0px;
+        }
+        .img_container a{
+            position: absolute;
+            margin-top: 10px;
+            alignment-adjust: middle;
+            z-index: 100;
+            right: 43.5%;
+            vertical-align: middle;
+            top: 450px;
 
-</style>
-</div>
-</body>
+        }
+        .country{
+            bottom: 150px;
+            background-color: rgba(0,0,0,0.5);
+            margin-left: 50px;
+            border: 1px solid black;
+            opacity: 0.6;
+            filter: alpha(opacity=60); /* For IE8 and earlier */
+        }
+        .country p{
+            font-size: 24px;
+            color: white;
+        }
+        .portfolio-box-caption:hover{
+            background-color: rgba(0, 255, 92, 0.5); 
+        }
+        .carousel-control{
+            height:600px;
+        }
+        #desc-web{
+            background-color: rgba(0, 255, 100, 0.4);
+            border: 1px solid black;
+            filter: alpha(opacity=60); /* For IE8 and earlier */
+        }
+        .home{
+            background-color: #e5e5e5;
+        }
+
+    </style>
 
 </html>
