--- a/application/views/scripts/user/update.phtml
+++ b/application/views/scripts/user/update.phtml
@@ -6,7 +6,8 @@
 <body>
 <div class="container">
 <div class="page-header">
-	<h1>Update Profile</h1>
+    <h1 class="text-center">Update Profile</h1>
+    <a href="http://greentravel.com" class="btn btn-success">Back To Home Page</a>
 </div>
 	<?php
 		echo $this->user_form;
